# Solar-System

./: .gitignore  CMakeLists.txt  README.md  build-debug.bat  build-debug.sh  build-release.bat  build-release.sh  build.bat  build.sh  premake5.lua  setup-vs.bat  setup.bat
Solar System/: premake5.lua
Solar System/Assets/Shaders/: shader.wgsl
Solar System/src/: Main.cpp
Solar System/src/Core/: Application.cpp  Application.h  State.h  WGPUContext.cpp
Solar System/src/States/: PlanetCreator.cpp  PlanetCreator.h
Solar System/src/Util/: AssetManager.cpp  AssetManager.h
Solar System/src/WGPU/: Pipeline.cpp  Pipeline.h
Solar-System/: premake5.lua
Solar-System/Assets/Shaders/: shader.wgsl
Solar-System/src/: Main.cpp
Solar-System/src/Celestial-Bodies/: CelestialBody.cpp  CelestialBody.h  IcoSphere.cpp  IcoSphere.h  Planet.cpp  Planet.h  PlanetPipeline.cpp  PlanetPipeline.h
Solar-System/src/Core/: Application.cpp  Application.h  Input.cpp  Input.h  Window.cpp  Window.h
Solar-System/src/States/: PlanetCreator.cpp  PlanetCreator.h
Solar-System/src/Util/: AssetManager.cpp  AssetManager.h  Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  FractalNoiseSettings.h  Math.h
Solar-System/src/WGPU/: DepthTexture.cpp  DepthTexture.h  Mesh.cpp  Mesh.h  MeshPipeline.cpp  MeshPipeline.h  Texture2D.cpp  WGPUContext.cpp  WGPUContext.h
assets/images/: textures_from.txt
assets/shaders/: MoonComputeShader.wgsl  MoonRenderShader.wgsl  moon.wgsl  shader.wgsl
scripts/: build-debug.bat  build-release.bat  build-release.sh
src/: Main.cpp
src/celestial/: IcoSphere.cpp  IcoSphere.h  Moon.cpp  Moon.h  MoonComputePipeline.cpp  MoonComputePipeline.h  MoonPipeline.cpp  MoonPipeline.h  MoonRenderPipeline.cpp  MoonRenderPipeline.h
src/celestial-bodies/: IcoSphere.cpp  IcoSphere.h  Moon.cpp  MoonPipeline.cpp  Planet.cpp  Planet.h  PlanetPipeline.cpp  PlanetPipeline.h
src/core/: Application.cpp  Application.h  Input.cpp  Input.h  State.h  Window.cpp  Window.h
src/core/event/: KeyboardEvent.h  MouseEvent.h  WindowEvent.h
src/debug/: Timer.h
src/mygui/: MyGuiContext.cpp
src/state/: MoonCreator.cpp  MoonCreator.h
src/states/: MoonCreator.cpp  MoonCreator.h  PlanetCreator.cpp  PlanetCreator.h
src/util/: AssetManager.cpp  AssetManager.h  Camera.h  CameraController.cpp  CameraController.h  FractalNoiseSettings.h  Math.cpp  Math.h  Types.h
src/wgpu/: Buffer.cpp  Buffer.h  ComputeBuffer.cpp  ComputeBuffer.h  DepthTexture.cpp  DepthTexture.h  Mesh.cpp  Mesh.h  Texture2D.cpp  Texture2D.h  WGPUContext.cpp  WGPUContext.h
